--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
     "mongoose": "^5.9.27",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuidv1": "^1.6.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
