--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-jwt": "^6.0.0",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "uuidv1": "^1.6.14"
